# cui-desktop

./: .gitignore  LICENSE  PROMPT.md  README.md  config.json  cui  index.html  package.json  vite.config.ts
.github/workflows/: build-dev.yml  build.yml  notarize-check.yml  notarize-staple.yml  notarize-submit.yml  release-macos.yml  release-windows.yml  release.yml  update-latest.yml
docs/: apple-signing-guide.md
scripts/: build-cui.sh  pull-cui.sh  setup.sh
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_conf.rs  commands.rs  config.rs  lib.rs  main.rs  proxy.rs  tunnel.rs  tunnel_inject.js
src/lib/: api.ts  i18n.ts  router.ts  store.ts
src/pages/: app.ts  login.ts  servers.ts  settings.ts
src/styles/: global.css
